[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jornada-python-hashtag"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
description = "A Python project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
